Metodo que devuelve datos de liga de base de datos y si no existen los solicita a la API

--- a/templates/test.html
+++ b/templates/test.html
@@ -15,6 +15,27 @@
         <br>
         <br>
         <label for="summoner name">Summoner name: <span id="summoner_name_preview">{{ summoner_name }}</span></label>
+        <br>
+        <label for="Ranked Solo">Ranked Solo: <span id="soloq_rank_preview">{{ soloq_rank }}</span></label>
+        <br>
+        <label for="soloq_lp">Soloq_lp: <span id="soloq_lp">{{ soloq_lp }}</span></label>
+        <br>
+        <label for="soloq_wins">Soloq_wins: <span id="soloq_wins">{{ soloq_wins }}</span></label>
+        <br>
+        <label for="soloq_losses">Soloq_losses: <span id="soloq_losses">{{ soloq_losses }}</span></label>
+        <br>
+        <label for="soloq_wr">Soloq_wr: <span id="soloq_wr">{{ soloq_wr }}</span>%</label>
+        <br>
+        <label for="Ranked Flex">Ranked Flex: <span id="flex_rank_preview">{{ flex_rank }}</span></label>
+        <br>
+        <label for="flex_lp">Flex_lp: <span id="flex_lp">{{ flex_lp }}</span></label>
+        <br>
+        <label for="flex_wins">Flex_wins: <span id="flex_wins">{{ flex_wins }}</span></label>
+        <br>
+        <label for="flex_losses">Flex_losses: <span id="flex_losses">{{ flex_losses }}</span></label>
+        <br>
+        <label for="flex_wr">Flex_wr: <span id="flex_wr">{{ flex_wr }}</span>%</label>
+        <br>
     </form>
 </body>
 </html>
