Recent Matches funcional, tanto solicitud a API como base de datos

--- a/templates/test.html
+++ b/templates/test.html
@@ -55,7 +55,43 @@
         <div>
             <label>Flex_wr: </label><span>{{ flex_wr }}</span>%
         </div>
+        <div>
+            <label>matches_data: </label><span>{{ champion_last_game }}</span>
+        </div>
+    </section>
+    <section>
+        <h2>Recent Matches</h2>
+        <section>
+            <div>
+                <label>Champion played: </label><span>{{ champion_played_0 }}</span>
+            </div>
+        </section>
+        <section>
+            <div>
+                <label>Champion played: </label><span>{{ champion_played_1 }}</span>
+            </div>
+        </section>
+        <section>
+            <div>
+                <label>Champion played: </label><span>{{ champion_played_2 }}</span>
+            </div>
+        </section>
+        <section>
+            <div>
+                <label>Champion played: </label><span>{{ champion_played_3 }}</span>
+            </div>
+        </section>
+        <section>
+            <div>
+                <label>Champion played: </label><span>{{ champion_played_4 }}</span>
+            </div>
+        </section>
         {% endif %}
+        
+    </section>
+    <section>
+        <h2>Champion Stats</h2>
+        
     </section>
 </body>
 </html>
