--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -217,11 +217,15 @@ h6 {
 }
 
 /* Card */
+
 .card {
   margin-bottom: 30px;
   border: none;
   border-radius: 5px;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
+  width: 100%;
+  border: 1px solid #ccc;
+  margin: 10px;
 }
 
 .card-header,
@@ -230,6 +234,22 @@ h6 {
   background-color: #fff;
   color: #798eb3;
   padding: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.pr-25 {
+  padding-right: 25px;
+}
+
+.pl-25 {
+  padding-left: 10px;
+}
+
+.card-body {
+  align-items: center;
+  padding-right: 25;
+  padding-left: 25;
 }
 
 .card-title {
@@ -246,9 +266,6 @@ h6 {
   font-weight: 400;
 }
 
-.card-body {
-  padding: 0 20px 20px 20px;
-}
 
 .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.6);
@@ -259,6 +276,24 @@ h6 {
   font-weight: 500;
   font-family: "Poppins", sans-serif;
   font-size: 20px;
+}
+
+/* Update Button */
+.update-button {
+  background-color: #90b9ff;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.update-button:hover {
+  background-color: #56a8ff;
 }
 
 /* Close Button */
@@ -806,7 +841,7 @@ h6 {
 .dashboard .info-card h6 {
   font-size: 28px;
   color: #012970;
-  font-weight: 700;
+  font-weight: 620;
   margin: 0;
   padding: 0;
 }
@@ -824,6 +859,7 @@ h6 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 5px;
 }
 
 .dashboard .sales-card .card-icon {
@@ -1238,3 +1274,129 @@ h6 {
   color: #012970;
 }
 
+
+/* CARDS */
+
+
+.champ-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.summoner-name {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.game-result {
+  margin-left: auto;
+  color: green;
+  margin-right: 10px;
+}
+
+.game-info {
+  display: flex;
+}
+
+.game-type {
+  font-weight: bold;
+  margin-right: 10px;
+  text-align: start;
+}
+
+.game-duration {
+  margin-left: auto;
+}
+
+.game-date {
+  margin-left: auto;
+}
+
+.game-stats {
+  display: flex;
+}
+
+.kda {
+  font-weight: bold;
+  margin-right: 10px;
+  font-size: 15px;
+}
+
+.kda-ratio {
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.cs {
+  align-self: center;
+  font-size: 10px;
+}
+
+.kill-participation {
+  margin-left: auto;
+}
+
+.game-items {
+  display: flex;
+}
+
+.item-icon {
+  width: 30px;
+  height: 30px;
+  background-color: #e1ecff;
+  margin: 2px;
+  border-radius: 5px;
+}
+
+.item-icon:not(:empty) {
+  display: inline-block; /* mostrar los elementos con imagen */
+}
+
+.game-runes,
+.participant-icon {
+  display: flex;
+  flex-direction: column;
+}
+
+.rune-icon {
+  width: 20px;
+  height: 20px;
+  margin: 2px 4px;
+}
+
+.game-score {
+  display: flex;
+  flex-direction: column;
+  margin: 8px;
+}
+
+.cs-center {
+  align-self: left;
+}
+
+
+.participant-icon {
+  width: 16px;
+  height: 16px;
+  background-color: #e1ecff;
+  margin: 2px;
+  border-radius: 5px;
+}
+
+.participant-column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 15px;
+}
+
+.participant-name {
+  font-size: 13px;
+}
+
+.pl-100 {
+  padding-left: 100px;
+}
+
+.center-text {
+  text-align: center;
+}
