--- a/templates/test.html
+++ b/templates/test.html
@@ -332,59 +332,106 @@
             </div>
           </div><!-- End Roles chart-->
 
-          <!-- News & Updates Traffic -->
+          <!-- Champion Stats -->
           <div class="card">
-            <div class="filter">
-              <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-              <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                <li class="dropdown-header text-start">
-                  <h6>Filter</h6>
-                </li>
-
-                <li><a class="dropdown-item" href="#">Today</a></li>
-                <li><a class="dropdown-item" href="#">This Month</a></li>
-                <li><a class="dropdown-item" href="#">This Year</a></li>
-              </ul>
-            </div>
-
             <div class="card-body pb-0">
-              <h5 class="card-title">News &amp; Updates <span>| Today</span></h5>
-
-              <div class="news">
-                <div class="post-item clearfix">
-                  <img src="static/img/news-1.jpg" alt="">
-                  <h4><a href="#">Nihil blanditiis at in nihil autem</a></h4>
-                  <p>Sit recusandae non aspernatur laboriosam. Quia enim eligendi sed ut harum...</p>
+              <h5 class="card-title ">Champion Stats</h5>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <img class="champ-img" src="static/img/champion/Diana.png" alt="">
+                  </div>
+                  <div class="col">
+                    <span class="champ-name">Diana</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="kda1">2.93 KDA</span>
+                    <span class="kda-ratio">9.0 5 12.4</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="win-rate">99%</span>
+                    <span class="games-played">123 games</span>
+                  </div>
                 </div>
-
-                <div class="post-item clearfix">
-                  <img src="static/img/news-2.jpg" alt="">
-                  <h4><a href="#">Quidem autem et impedit</a></h4>
-                  <p>Illo nemo neque maiores vitae officiis cum eum turos elan dries werona nande...</p>
+              </div>
+              <hr>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <img class="champ-img" src="static/img/champion/Diana.png" alt="">
+                  </div>
+                  <div class="col">
+                    <span class="champ-name">Diana</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="kda1">2.93 KDA</span>
+                    <span class="kda-ratio">9.0 5 12.4</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="win-rate">99%</span>
+                    <span class="games-played">123 games</span>
+                  </div>
                 </div>
-
-                <div class="post-item clearfix">
-                  <img src="static/img/news-3.jpg" alt="">
-                  <h4><a href="#">Id quia et et ut maxime similique occaecati ut</a></h4>
-                  <p>Fugiat voluptas vero eaque accusantium eos. Consequuntur sed ipsam et totam...</p>
+              </div>
+              <hr>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <img class="champ-img" src="static/img/champion/Diana.png" alt="">
+                  </div>
+                  <div class="col">
+                    <span class="champ-name">Diana</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="kda1">2.93 KDA</span>
+                    <span class="kda-ratio">9.0 5 12.4</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="win-rate">99%</span>
+                    <span class="games-played">123 games</span>
+                  </div>
                 </div>
-
-                <div class="post-item clearfix">
-                  <img src="static/img/news-4.jpg" alt="">
-                  <h4><a href="#">Laborum corporis quo dara net para</a></h4>
-                  <p>Qui enim quia optio. Eligendi aut asperiores enim repellendusvel rerum cuder...</p>
+              </div>
+              <hr>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <img class="champ-img" src="static/img/champion/Diana.png" alt="">
+                  </div>
+                  <div class="col">
+                    <span class="champ-name">Diana</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="kda1">2.93 KDA</span>
+                    <span class="kda-ratio">9.0 5 12.4</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="win-rate">99%</span>
+                    <span class="games-played">123 games</span>
+                  </div>
                 </div>
-
-                <div class="post-item clearfix">
-                  <img src="static/img/news-5.jpg" alt="">
-                  <h4><a href="#">Et dolores corrupti quae illo quod dolor</a></h4>
-                  <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
+              </div>
+              <hr>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <img class="champ-img" src="static/img/champion/Diana.png" alt="">
+                  </div>
+                  <div class="col">
+                    <span class="champ-name">Diana</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="kda1">2.93 KDA</span>
+                    <span class="kda-ratio">9.0 5 12.4</span>
+                  </div>
+                  <div class="col stats-wrapper">
+                    <span class="win-rate">99%</span>
+                    <span class="games-played">123 games</span>
+                  </div>
                 </div>
-
-              </div><!-- End sidebar recent posts-->
-
+              </div>
             </div>
-          </div><!-- End News & Updates -->
+          </div><!-- End Champion Stats-->
 
         </div><!-- End Right side columns -->
 
