Eliminado archivo data.db de .gitignore

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1292,6 +1292,11 @@ h6 {
   margin-left: auto;
   color: green;
   margin-right: 10px;
+  font-weight: bold;
+}
+
+.game-result.defeat {
+  color: red;
 }
 
 .game-info {
